2003-06-11  William Jon McCann  <mccann@jhu.edu>

	* gnotravex.png: Removed.
	
	* Makefile.am: Removed now unused pixmap.

	* gnotravex.c: Reworked to use drawing primatives and pango text
	to draw pieces.  This allows the colors and text to follow the
	default theme and for the size to be scalable.  Also tried to
	make coding style self consistent.

2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotravex.c: i18n fixes from Christian Neumair (bug #114875).

2003-05-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Implement setgid modifications
	(see gnome-games/ChangeLog). Also undo the score directory
	changes. It breaks more than it fixes.
	

2003-05-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (scoredir): Changed score directory to fix bug
	#113968.

2003-05-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotravex.c: Optimisation of the fix for #78189. It should
	improve performance over a remote X connection. Unfortunately I
	haven't tested it yet to see if it actually helps.

2003-05-13  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotravex.c: Fixed bug #78189. No more corruption of the tiles
	if they are moved off the edge of the window.

2003-05-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: 
	* gnotravex.desktopn.in (Icon): Moved location of the icon to the
	shared pixmap directory, closes bug #100950.

2003-04-06  Ross Burton  <ross@burtonini.com>

	* gnotravex.c: Fix code which the Sun compiler doesn't
	like. Thanks to Rick Burridge, closing #109992.

2003-02-26  Theo van Klaveren  <t.vanklaveren@student.utwente.nl>

	* gnotravex.c: Replace rand()/srand() usage with g_random_*().
	Fixes #103832.

2003-02-05  Ross Burton  <ross@burtonini.com>

	* help/C/gnotravex.xml: Updated Rob's email.

2002-12-11  Ross Burton  <ross@burtonini.com>

	* gnotravex.c: Rename game to "GNOME Tetravex".

2002-11-21  Tim Musson  <trmusson@ihug.co.nz>
